esercizio creare commit

--- a/aboutus.html
+++ b/aboutus.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Stiamo lavorando su git!</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, dolores. Delectus voluptas consectetur eveniet deserunt in dolorum esse eaque reiciendis tempora. Excepturi quos facilis perferendis et reprehenderit quod possimus quaerat.</p>
 </body>
 </html>
