--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,6 @@
 </head>
 
 <body>
-    
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt, itaque rerum. Fuga similique voluptatem possimus explicabo pariatur consequatur. Nihil veniam quis sunt facilis alias repellat autem vel quas dicta vitae.</p>
 </body>
 </html>
