feat:nuovo branch html1

--- a/indexProva1.html
+++ b/indexProva1.html
@@ -7,7 +7,27 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Git p2</p>
+    <p>Git <br> p2</p>
     <h1>esercizio commit log ecc</h1>
+    <h2>lorem ipsum</h2>
+    <h3>lorem ipsum</h3>
+    <h4>lorem ipsum</h4>
+    <h5>lorem ipsum</h5>
+    <h6>lorem ipsum</h6>
+    <div>ciao mondo</div>
+    <div>ciao mondo 2</div>
+    <span>ciao mondo</span>
+    <span>ciao mondo 2</span>
+    <ul>
+        <li>
+            oggetto 1
+        </li>
+        <li>oggetto 2</li>
+    </ul>
+    <ol>
+        <li>oggetto1</li>
+        <li>oggetto2</li>
+    </ol>
+    <a href="./aboutus.html">vai su about us</a>
 </body>
 </html>
